ios/openim_sdk_ffi.xcframework/ios-arm64/openim_sdk_ffi.framework/openim_sdk_ffi.h

typedef struct { const char *p; ptrdiff_t n; } _GoString_;
typedef long long GoInt64;
typedef GoInt64 GoInt;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;
extern void SubscribeUsersStatus(char* operationID, char* userIDs);
extern void UnsubscribeUsersStatus(char* operationID, char* userIDs);
extern void GetSubscribeUsersStatus(char* operationID);