src/flutter_openim_sdk_ffi.h

typedef struct
{
    void (*onMethodChannel)(Dart_Port_DL port, char *);
} Openim_Listener;
typedef struct
{
    Dart_Port_DL port;
    char *message;
} ThreadArgs;
FFI_PLUGIN_EXPORT Openim_Listener getIMListener();