lib/openim_ffi_bindings_generated.dart


  late final _SubscribeUsersStatusPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('SubscribeUsersStatus');
  late final _SubscribeUsersStatus =
      _SubscribeUsersStatusPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void UnsubscribeUsersStatus(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDs,
  ) {
    return _UnsubscribeUsersStatus(operationID, userIDs);
  }

  late final _UnsubscribeUsersStatusPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('UnsubscribeUsersStatus');
  late final _UnsubscribeUsersStatus =
      _UnsubscribeUsersStatusPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetSubscribeUsersStatus(ffi.Pointer<ffi.Char> operationID) {
    return _GetSubscribeUsersStatus(operationID);
  }

  late final _GetSubscribeUsersStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'GetSubscribeUsersStatus',
      );
  late final _GetSubscribeUsersStatus =
      _GetSubscribeUsersStatusPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>)
      >();

  Openim_Listener getIMListener() {
    return _getIMListener();
  }

  late final _getIMListenerPtr =
      _lookup<ffi.NativeFunction<Openim_Listener Function()>>('getIMListener');
  late final _getIMListener =
      _getIMListenerPtr.asFunction<Openim_Listener Function()>();
}

final class _GoString_ extends ffi.Struct {
  external ffi.Pointer<ffi.Char> p;

  @ptrdiff_t()
  external int n;
}

typedef ptrdiff_t = __darwin_ptrdiff_t;
typedef __darwin_ptrdiff_t = ffi.Long;
typedef Dart__darwin_ptrdiff_t = int;

final class Openim_Listener extends ffi.Struct {
  external ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(Dart_Port_DL, ffi.Pointer<ffi.Char>)>
  >
  onMethodChannel;
}

/// ============================================================================
/// IMPORTANT! Never update these signatures without properly updating
/// DART_API_DL_MAJOR_VERSION and DART_API_DL_MINOR_VERSION.
///
/// Verbatim copy of `dart_native_api.h` and `dart_api.h` symbol names and types
/// to trigger compile-time errors if the symbols in those files are updated
/// without updating these.
///
/// Function return and argument types, and typedefs are carbon copied. Structs
/// are typechecked nominally in C/C++, so they are not copied, instead a
/// comment is added to their definition.
typedef Dart_Port_DL = ffi.Int64;
typedef DartDart_Port_DL = int;

final class GoInterface extends ffi.Struct {
  external ffi.Pointer<ffi.Void> t;

  external ffi.Pointer<ffi.Void> v;
}

final class GoSlice extends ffi.Struct {
  external ffi.Pointer<ffi.Void> data;

  @GoInt()
  external int len;

  @GoInt()
  external int cap;
}

typedef GoInt = GoInt64;
typedef GoInt64 = ffi.LongLong;
typedef DartGoInt64 = int;

final class ThreadArgs extends ffi.Struct {
  @Dart_Port_DL()
  external int port;

  external ffi.Pointer<ffi.Char> message;
}
